# llm-chess-eval

./: .gitignore  BLOG_DRAFT.md  FINDINGS.md  HANDOFF.md  HOWTO.md  METHODOLOGY.md  README.md  RESULTS.md  pyproject.toml  report.md
data/positions/: legality_v1.jsonl
experiments/code_tool_prototype/: extract_positions.py  replay_positions.jsonl  run_replay.py
scripts/: aggregate_chunks.py  analyze_consistency.py  analyze_legality.py  analyze_retry_attempts.py  classify_all_illegals.py  compare_metric_proposals.py  compile_v2_matrix.py  cross_eval_correlation.py  hardest_positions.py  inspect_game.py  inspect_gpt5_errors.py  inspect_illegals.py  matrix_with_retry_context.py  monitor_jobs.sh  quick_inspect.py  reasoning_vs_quality.py  rerun_cr_all.ps1  rerun_deepseek_clean.ps1  rerun_gemini_3_1_pro_after_reset.ps1  rerun_gemini_clean.ps1  rerun_gemini_pro.ps1  rerun_gemini_small.ps1  rerun_openai_clean.ps1  rerun_openai_deepseek.ps1  run_augmented_batch.ps1  run_deepseek_benchmark.ps1  run_flash_lite_skill_sweep.ps1  run_gemini_2_5_pro.ps1  run_google_benchmark.ps1  run_partial_benchmark.ps1  run_play_strength.ps1  summarize_legality.py  test_claims.py  validate_bank.py
src/llm_chess_eval/: cli.py  config.py  engine.py  types.py
src/llm_chess_eval/adapters/: _shared.py  base.py  claude.py  claude_python.py  factory.py  gemini.py  openai.py  openai_compat.py
src/llm_chess_eval/analytics/: accumulation.py  illegal_taxonomy.py  report.py
src/llm_chess_eval/evals/: chess_reliability.py  consistency.py  games.py  legality.py  move_quality.py  play_quality.py  (+1 more)
(+2 files in other folders)
